# plurist

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  LICENSE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  sonar-project.properties
.husky/: pre-commit  pre-push
backend/: CHANGES_BACKEND.md  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  api.py  auth.py  models.py  oidc.py  session_auth.py
backend/apps/accounts/management/commands/: bootstrap_owner.py  seed_test_accounts.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_oidcprovider.py
backend/apps/analytics/: api.py  models.py  services.py
backend/apps/analytics/migrations/: 0001_initial.py
backend/apps/approvals/: models.py
backend/apps/approvals/migrations/: 0001_initial.py  0002_initial.py
backend/apps/common/: api.py
backend/apps/design_bank/: api.py  apps.py  brand_api.py  brand_profile.py  constants.py  design_system_service.py  models.py  scanners.py  storage.py  tasks.py  validators.py
backend/apps/design_bank/migrations/: 0001_initial.py  0002_add_project_fk_and_resource_fields.py  0003_add_file_size_bytes.py
backend/apps/generation/: api.py  chat_api.py  chat_service.py  models.py  prompt_builder.py  sanitizer.py  services.py  tasks.py
backend/apps/generation/migrations/: 0001_initial.py  0002_add_project_and_format.py  0003_add_slide_count_width_height_expand_format.py  0004_add_chat_conversation.py
backend/apps/generation/providers/: anthropic_provider.py  base.py  errors.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  registry.py
backend/apps/integrations/: adapters.py  api.py  crypto.py  feature_flags.py  oauth_providers.py  registry.py  tasks.py
backend/apps/integrations/providers/: instagram.py  linkedin.py  mock_adapter.py  x.py
backend/apps/mcp/: admin.py  apps.py  auth.py  models.py  prompts.py  resources.py  server.py
backend/apps/mcp/management/commands/: mcp_serve.py  mcp_stdio.py
backend/apps/mcp/migrations/: 0001_initial.py
backend/apps/mcp/tools/: content.py  design_bank.py  generation.py  projects.py  skills.py
backend/apps/meta/: api.py  capabilities.py
backend/apps/posts/: api.py  models.py
backend/apps/posts/migrations/: 0001_initial.py  0002_add_project_format_html.py  0003_add_slide_index_carousel_slide_expand_format.py  0004_frame_metadata_and_variant_meta.py  0005_data_strip_publishing.py  0006_schema_strip_publishing.py  0007_add_global_styles.py
backend/apps/projects/: api.py  models.py
backend/apps/projects/migrations/: 0001_initial.py  0002_project_color_icon.py  0003_alter_project_icon_storage_key.py
backend/apps/publishing/: api.py  apps.py  models.py  tasks.py
backend/apps/publishing/migrations/: 0001_initial.py  0002_publishattempt_idempotency_key.py  0003_socialconnection_oauth_fields.py
backend/apps/rendering/: api.py  apps.py  export.py  formats.py  hasher.py  models.py  tasks.py  templates_registry.py
backend/apps/rendering/migrations/: 0001_initial.py  0002_add_format_html_content.py
backend/apps/scheduler/: api.py  models.py  tasks.py
backend/apps/scheduler/migrations/: 0001_initial.py
backend/apps/skills/: admin.py  api.py  github_fetcher.py  models.py  schemas.py
backend/apps/skills/management/commands/: seed_skills.py
backend/apps/skills/migrations/: 0001_initial.py  0002_marketplace_fields.py
backend/apps/workspace/: api.py  apps.py  crypto.py  models.py  signals.py
backend/apps/workspace/migrations/: 0001_initial.py
backend/config/: api.py  celery.py  urls.py
backend/config/settings/: base.py  local.py  test.py
backend/tests/: test_smoke.py
backend/tests/accounts/: factories.py  test_google_sso.py  test_invite_only_auth.py  test_roles.py
backend/tests/analytics/: test_operational_summary.py  test_operational_summary_api.py
backend/tests/api/: test_health.py  test_openapi.py
backend/tests/approvals/: test_owner_only_approval.py
backend/tests/brand_profile/: test_versioning.py
backend/tests/design_bank/: factories.py  test_design_system_api.py  test_html_reference_only.py  test_sources_list_api.py  test_upload_sources.py  test_url_ingest_blocks_private_ips.py
backend/tests/domain/: test_network_capabilities.py  test_workflow_state_machine.py
backend/tests/generation/: test_chat_service.py  test_compare_registry.py  test_manual_compare_partial_failure.py  test_model_id_override.py  test_ollama_provider.py  test_prompt_builder_design_system.py  test_sanitizer.py  test_slide_count.py
backend/tests/integrations/: test_connection_permissions.py  test_crypto.py  test_network_feature_flags.py  test_oauth_flow.py  test_token_refresh.py
backend/tests/integrations/instagram/: test_publish_single_image.py  test_requires_image.py
backend/tests/integrations/linkedin/: test_publish_single_image.py
backend/tests/integrations/x/: test_publish_single_image.py  test_same_network_fallback_rules.py
backend/tests/mcp/: factories.py  test_auth.py  test_models.py  test_resources_prompts.py  test_server.py  test_tools_content.py  test_tools_design_bank.py  test_tools_generation.py  test_tools_projects.py
backend/tests/posts/: test_compat_alias.py  test_draft_post_patch.py  test_frame_metadata_persistence.py  test_get_variants.py
backend/tests/publishing/: test_immediate_publish_idempotency.py  test_publish_with_connection.py
backend/tests/rendering/: factories.py  test_render_cache.py  test_render_jobs.py  test_rendering_api.py  test_upload_blob_api.py
backend/tests/scheduler/: test_requires_approved_snapshot.py  test_workspace_timezone_dst.py
backend/tests/workspace/: test_ai_settings_api.py  test_crypto.py  test_provider_key_resolution.py
docker-utils/: docker-compose.static-analysis.yml
docs/: frontend-ui-conventions.md  pre-commit.md  static-analysis.md
frontend/: .eslintrc.cjs  CHANGES_CODE.md  Dockerfile  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.e2e.json  vite.config.ts  (+2 more)
(+270 files in other folders)
