[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialclaw-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "django-ninja>=1.1",
    "celery[redis]>=5.3",
    "gunicorn>=21.2",
    "psycopg[binary]>=3.1",
    "python-decouple>=3.8",
    "httpx>=0.27",
    "authlib>=1.3",
    "boto3>=1.34",
    "playwright>=1.44",
    "factory-boy>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]
